[package]
name = "alfresco-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart", "stream"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
base64 = "0.21.5"
csv = "1.3.0"
anyhow = "1.0.79"
